--- a/style.css
+++ b/style.css
@@ -241,7 +241,9 @@ p {
     }
 }
 
-.design-section {
+.how-it-works {
+    margin-top: 65px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -314,4 +316,51 @@ p {
         -webkit-transform: translateX(-50%);
         transform: translateX(-50%);
     }
+}
+
+/* Testimonials section */
+
+.testimonial-heading {
+    margin-top: 60px;
+    color: #d6d8db;
+    text-align: center;
+}
+
+.testimonial-container {
+    margin-top: 30px;
+    width: 50%;
+    max-width: 600px;
+    text-align: center;
+    background: #07358F;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
+}
+
+.testimonial {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    position: absolute;
+    width: 100%;
+}
+
+.testimonial.active {
+    opacity: 1;
+    transform: translateY(0);
+    position: relative;
+}
+
+.author {
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.testimonial img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 10px;
 }
